<resources>
    <string name="app_name">Promedia tu semestre</string>
    <string name="banner_ad_unit_id">ca-app-pub-8837572421295884/1174014512</string>
    <string name="texto_1">Digite la cantidad de notas a promediar: </string>
    <string name="texto_2">Ingresar</string>
    <string name="texto_3">Nota: </string>
    <string name="texto_4">Porcentaje: </string>
    <string name="texto_5">Ingrese las notas del 0 al 5</string>
    <string name="texto_6">Elija el tipo de mensaje que desea recibir con respecto al promedio final</string>
    <string name="texto_7">Optimista </string>
    <string name="texto_8">Sarcasmo</string>
    <string name="texto_9">Aleatorio</string>
    <string name="texto_10">Seleccione una opción</string>
    <string name="texto_11">Digite la cantidad de créditos  y materias del semestre: </string>
    <string name="texto_12">Créditos:  </string>
    <string name="texto_13">Materias:  </string>
    <string name="texto_14">Regresar a lista de notas</string>
    <string name="texto_15">Ir a pantalla de inicio</string>
    <string name="texto_16">Tipo de frase</string>
    <string name="texto_17">Modo Nocturno</string>
    <string name="texto_18">Seleccione la clase de mesajes e imagenes que desea recibir según su nota</string>
    <string name="texto_19">Añadir nota</string>
    <string name="texto_20">Remover nota</string>
    <string name="texto_21">Calcular nota para pasar</string>
    <string name="texto_22">Elija el tipo de mensajes e imagenes que desea recibir según su nota faltante</string>
    <string name="texto_23">Formato de la nota</string>
    <string name="texto_24">valores de la aplicación</string>
    <string name="texto_25">Personalización</string>
    <string name="texto_26">Nota maxima</string>
    <string name="texto_27">Nota para pasar</string>
    <string name="texto_28">Personalización</string>
    <string name="texto_29">Guardar configuración</string>
    <string name="texto_30">¿Desea guardar la configuracion?</string>
    <string name="texto_31">Guardar</string>
    <string name="texto_32">Descartar</string>
    <string name="simbolo">%</string>
    <string name="vacio">Texto vacío</string>

    <string name="texto_7_valor" translatable="false">optimista </string>
    <string name="texto_8_valor" translatable="false">sarcasmo</string>
    <string name="texto_9_valor" translatable="false">aleatorio</string>

    <string name="llave" translatable="false">Mensaje</string>

    <string name="idBanner">ca-app-pub-8837572421295884/1174014512</string>

    <string-array name="frases1">

        <item>Las cosas empiezan desde cero</item>
        <item>optimista01</item>
        <item>Al menos no te estresaste</item>
        <item>optimista02</item>
        <item>Una nota no te define</item>
        <item>optimista03</item>
        <item>Asiste un poco más a clases</item>
        <item>optimista04</item>
        <item>Dedícale más tiempo a tu estudio</item>
        <item>optimista05</item>
        <item>ESTUDIEN VAGOS</item>
        <item>sarcasmo05</item>
        <item>¿Cómo alguien como tu llego a la universidad?</item>
        <item>sarcasmo04</item>
        <item>¿no has pensado en cambiarte de carrera?</item>
        <item>sarcasmo03</item>
        <item>Eres la definición de mediocridad</item>
        <item>sarcasmo02</item>
        <item>¿olvidaste que te matriculaste?</item>
        <item>sarcasmo01</item>

    </string-array>

    <string-array name="frases2">

        <item>El siguiente semestre es tuyo, vamos con toda </item>
        <item>optimista11</item>
        <item>Si te esfuerzan un poco más lo lograras</item>
        <item>optimista12</item>
        <item>Lo importante es que aprendiste</item>
        <item>optimista13</item>
        <item>Ya casi lo vas a lograr</item>
        <item>optimista14</item>
        <item>Perdiste esta batalla pero no la guerra, No te rindas</item>
        <item>optimista15</item>
        <item>Tan cerca y ten lejos</item>
        <item>sarcasmo11</item>
        <item>Los casis no valen</item>
        <item>sarcasmo12</item>
        <item>Sigue intentando</item>
        <item>sarcasmo13</item>
        <item>Llórelo papa</item>
        <item>sarcasmo14</item>
        <item>A este paso nunca te graduaras</item>
        <item>sarcasmo15</item>

    </string-array>

    <string-array name="frases3">

        <item>Lo lograste, sigue luchando por tus sueños</item>
        <item>optimista21</item>
        <item>Lo importantes es que ya pasaste</item>
        <item>optimista22</item>
        <item>Vales más que esa nota</item>
        <item>optimista23</item>
        <item>Todo esfuerzo valió la pena</item>
        <item>optimista24</item>
        <item>Pasaste, que alivio no tener que volver a ver esa materia</item>
        <item>optimista25</item>
        <item>Gracias por hacer tu tarea</item>
        <item>sarcasmo21</item>
        <item>¿Eres repitente?</item>
        <item>sarcasmo22</item>
        <item>¿para eso se trasnocho?</item>
        <item>sarcasmo23</item>
        <item>¿Debería felicitarte?</item>
        <item>sarcasmo24</item>
        <item>Vez que si se pudo</item>
        <item>sarcasmo25</item>

    </string-array>

    <string-array name="frases4">

        <item>Que buena nota, sigue así</item>
        <item>optimista31</item>
        <item>Costo, pero valió la pena</item>
        <item>optimista32</item>
        <item>Ya puedes dormir tranquilo</item>
        <item>optimista33</item>
        <item>Que buen alumno eres</item>
        <item>optimista34</item>
        <item>El profesor regalo la materia</item>
        <item>sarcasmo31</item>
        <item>Igual en la vida esa nota no sirve para nada</item>
        <item>sarcasmo32"</item>
        <item>Si no es la mejor nota, no vale</item>
        <item>sarcasmo33</item>
        <item>¿Realmente vale la pena esforzarse tanto?</item>
        <item>sarcasmo34</item>

    </string-array>

    <string-array name="frases5">

        <item>El mundo necesita más personas como tu</item>
        <item>optimista41</item>
        <item>Eres el mejor de la clase y lo sabes</item>
        <item>optimista42</item>
        <item>Ese eres tu . . . excelente</item>
        <item>optimista43</item>
        <item>¿Qué haces para ser tan bueno?</item>
        <item>optimista44</item>
        <item>Lograras todo lo que te propongas</item>
        <item>optimista45</item>
        <item>¿Usaste rodilleras?</item>
        <item>sarcasmo41</item>
        <item>Gracias piernas sexys</item>
        <item>sarcasmo42</item>
        <item>¿Qué tanto le rogaste al profe?</item>
        <item>sarcasmo43</item>
        <item>¿socializar no es lo tuyo verdad?</item>
        <item>sarcasmo44</item>
        <item>El único que se engaña eres tú</item>
        <item>sarcasmo45</item>

    </string-array>

    <string-array name="frase_final_1">

        <item>Ya perdiste, Esfuérzate un poco más el siguiente semestre</item>
        <item>optimistafinal01</item>
        <item>Ya no hay nada que hacer, dedícale tiempo a otras materias</item>
        <item>optimistafinal02</item>
        <item>Perdiste, sigue asistiendo a clase para no tener dificultades cuando la repitas.</item>
        <item>optimistafinal03</item>
        <item>¿no sé qué esperabas tenido esas notas?</item>
        <item>sarcasmofinal01</item>
        <item>Como que el estudio no es lo tuyo ¿verdad?</item>
        <item>sarcasmofinal02</item>
        <item>Deja de hacerle perder tiempo al profesor</item>
        <item>sarcasmofinal03</item>

    </string-array>

    <string-array name="frase_final_2">

        <item>No te rindas, parece difícil, pero los limites los pones tú</item>
        <item>optimistafinalf11</item>
        <item>Estudia un poco más y lo lograras</item>
        <item>optimistafinal12</item>
        <item>Supera las expectativas y demuestra que eres el mejor</item>
        <item>optimistafinal13</item>
        <item>Mejor ni lo intentes, esta fuera de tus posibilidades viendo esas notas</item>
        <item>sarcasmofinal11</item>
        <item>No lograras salvar todo un semestre en tan solo una semana</item>
        <item>sarcasmofinal12</item>
        <item>No tengo ni idea de cómo le harás para pasar.</item>
        <item>sarcasmofinal13</item>

    </string-array>

    <string-array name="frase_final_3">

        <item>Vas en buen camino, solo sigue trabajando como lo has hecho todo este tiempo</item>
        <item>optimistafinal21</item>
        <item>Sigue así, viendo el desempeño que has tenido no te costara mucho pasar</item>
        <item>optimistafinal22</item>
        <item>Ya te falta muy poco, aun así, no te confíes</item>
        <item>optimistafinal23</item>
        <item>Supongo que te seguirás acostando tarde para pasar algo que dentro de un mes ni te acordaras</item>
        <item>sarcasmofinal21</item>
        <item>No te falta mucho, sería una lástima que lo arruinaras al final</item>
        <item>sarcasmofinalf22</item>
        <item>Reza para que la suerte siga de tu lado</item>
        <item>sarcasmofinal23</item>

    </string-array>

    <string-array name="frase_final_4">

        <item>Muy buen trabajo, ya pasaste </item>
        <item>optimistafinal31</item>
        <item>No necesitas más nota, aun así, estudia para dejarla alta</item>
        <item>optimistafinal32</item>
        <item>Ya pasaste, ahora si te puedes tomar un descanso</item>
        <item>optimistafinal33</item>
        <item>Gracias por hacer tus obligaciones supongo</item>
        <item>sarcasmofinal31</item>
        <item>No todo en la vida es sacar buenas notas</item>
        <item>sarcasmofinal32</item>
        <item>Seguramente le pediste una “ayudita” al profesor</item>
        <item>sarcasmofinal33</item>

    </string-array>

</resources>
